--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,1 +1,9 @@
 @import "setup";
+@import "variables";
+@import "mixins";
+@import "landing";
+@import "about";
+@import "projects";
+@import "skills";
+@import "contact";
+@import "footer";
