--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -200,11 +200,20 @@ html {
   box-sizing: inherit;
 }
 
-* {
-  color: white;
+*,
+h1,
+h2,
+h3,
+h4 {
   padding: 0;
   margin: 0;
+}
+
+* {
+  color: white;
+
   font-family: "Exo 2", sans-serif;
+  font-size: 125%;
 }
 
 .sr-only {
@@ -235,4 +244,24 @@ ul {
 section {
   padding-top: 40px;
   padding-bottom: 40px;
+}
+
+p,
+a {
+  font-size: 1rem;
+}
+
+h2 {
+  font-size: 3rem;
+  color: #e0674e;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+h3 {
+  font-size: 2.5rem;
+}
+
+h4 {
+  font-size: 1.5rem;
 }
