added styles and some images

--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -8,9 +8,14 @@ header h2 {
   color: #a3a3a3;
 }
 
-.logoContainer {
-  display: flex;
-  justify-content: center;
+.headerIcon {
+  position: absolute;
+  bottom: 0;
+  left: 49%;
+}
+
+.landingWords {
+  padding-top: 20%;
 }
 
 .secondP {
