--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -1,6 +1,10 @@
-.iconGrpOne img,
-.iconGrpTwo img {
+.icon img {
   width: 100px;
+  margin: 20px 2.5rem;
+}
+
+.icon {
+  text-align: center;
 }
 
 .skills {
