--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -1,3 +1,16 @@
 .about {
   background-color: #282828;
 }
+
+.about img {
+  width: 45%;
+}
+
+.aboutImgTxt {
+  display: flex;
+}
+
+.aboutTxt {
+  width: 50%;
+  padding-left: 20px;
+}
