--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -2,8 +2,12 @@
   background-color: #282828;
 }
 
+.about h2 {
+  padding-bottom: 50px;
+}
+
 .about img {
-  width: 45%;
+  width: 40%;
 }
 
 .aboutImgTxt {
@@ -13,4 +17,5 @@
 .aboutTxt {
   width: 50%;
   padding-left: 20px;
+  align-self: center;
 }
