--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -213,6 +213,8 @@ h4 {
   color: white;
   font-family: "Exo 2", sans-serif;
   font-size: 125%;
+  letter-spacing: 1px;
+  line-height: 130%;
 }
 
 .sr-only {
