--- a/styles/style.css
+++ b/styles/style.css
@@ -259,6 +259,8 @@ h4 {
   color: white;
   font-family: "Exo 2", sans-serif;
   font-size: 125%;
+  letter-spacing: 1px;
+  line-height: 130%;
 }
 
 .sr-only {
@@ -331,7 +333,7 @@ header h2 {
 }
 
 .landingWords {
-  padding-top: 20%;
+  padding-top: 25%;
 }
 
 .secondP {
@@ -342,8 +344,12 @@ header h2 {
   background-color: #282828;
 }
 
+.about h2 {
+  padding-bottom: 50px;
+}
+
 .about img {
-  width: 45%;
+  width: 40%;
 }
 
 .aboutImgTxt {
@@ -355,10 +361,17 @@ header h2 {
 .aboutTxt {
   width: 50%;
   padding-left: 20px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .projects {
   background-color: #2a2a2a;
+}
+
+.projects h2 {
+  padding-bottom: 50px;
 }
 
 .projectsIcons img {
@@ -387,6 +400,33 @@ header h2 {
   padding-right: 20px;
 }
 
+.screenShots img {
+  width: 100%;
+  margin-right: 50px;
+  margin-bottom: 20px;
+}
+
+.projectGrouping {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.projectGrouping .odd {
+  margin-left: 50px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.odd img {
+  margin-right: 0;
+}
+
+.skills h2 {
+  padding-bottom: 50px;
+}
+
 .icon img {
   width: 100px;
   margin: 20px 2.5rem;
@@ -406,6 +446,7 @@ header h2 {
 
 .contact h2 {
   color: white;
+  padding-bottom: 50px;
 }
 
 footer {
