--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -6,3 +6,16 @@
   color: white;
   padding-bottom: 50px;
 }
+
+.contact p {
+  text-align: center;
+}
+
+.contact ul {
+  justify-content: center;
+}
+
+.contact ul li a {
+  padding: 20px;
+  font-size: 1.5rem;
+}
