--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -19,3 +19,8 @@
   padding: 20px;
   font-size: 1.5rem;
 }
+
+.contact ul li a:hover {
+  background-color: transparent;
+  border: 1px solid white;
+}
