--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -271,11 +271,12 @@ a {
   text-decoration: none;
   color: white;
   border: 1px solid #e0674e;
+  background-color: #e0664e94;
   border-radius: 5px;
   padding: 5px;
 }
 
 a:hover {
   color: #e0674e;
-  border-color: white;
+  background-color: rgba(255, 255, 255, 0.904);
 }
