--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -8,6 +8,40 @@ header h2 {
   color: #a3a3a3;
 }
 
+header a {
+  background: none;
+  border: none;
+  padding: none;
+}
+
+header a:hover {
+  background: none;
+}
+
+header ul {
+  justify-content: center;
+  justify-content: space-evenly;
+}
+
+.nav {
+  position: fixed;
+  top: -11%;
+  right: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(0, 0, 0, 0.596);
+  color: white;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  list-style: none;
+  padding-top: 4rem;
+  z-index: 90;
+}
+
+.showNav {
+  transform: translateY(0);
+}
+
 .headerIcon {
   position: absolute;
   bottom: 0;
@@ -20,6 +54,40 @@ header h2 {
 
 .secondP {
   padding-top: 30px;
+}
+
+.hamburger {
+  padding-top: 30px;
+  position: fixed;
+  right: 5%;
+  font-size: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  z-index: 99;
+}
+
+.barOne,
+.barTwo,
+.barThree {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.clicked .barOne {
+  transform: rotate(-45deg) translate(-9px, 6px);
+  background-color: #e0674e;
+}
+
+.clicked .barTwo {
+  opacity: 0;
+}
+
+.clicked .barThree {
+  transform: rotate(45deg) translate(-8px, -8px);
+  background-color: #e0674e;
 }
 
 // .logo path:nth-child(1) {
