--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -36,7 +36,8 @@
 
 .projectGrouping {
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .projectGrouping .odd {
