--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -22,26 +23,8 @@ h1 {
   margin: 0.67em 0;
 }
 
-figcaption,
-figure,
 main {
   display: block;
-}
-
-figure {
-  margin: 1em 40px;
-}
-
-hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
 }
 
 a {
@@ -56,88 +39,22 @@ abbr[title] {
           text-decoration: underline dotted;
 }
 
-b,
-strong {
-  font-weight: inherit;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-dfn {
-  font-style: italic;
-}
-
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-audio,
-video {
-  display: inline-block;
-}
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
 img {
   border-style: none;
 }
 
-svg:not(:root) {
-  overflow: hidden;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
+button {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button,
-input {
+button {
   overflow: visible;
 }
 
-button,
-select {
+button {
   text-transform: none;
 }
 
@@ -163,71 +80,9 @@ button:-moz-focusring,
   outline: 1px dotted ButtonText;
 }
 
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-
-progress {
-  display: inline-block;
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
-}
-
-details,
-menu {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-canvas {
-  display: inline-block;
-}
-
-template {
-  display: none;
 }
 
 [hidden] {
@@ -261,20 +116,6 @@ h4 {
   font-size: 125%;
   letter-spacing: 1px;
   line-height: 130%;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 ul {
@@ -328,6 +169,8 @@ a {
 a:hover {
   color: #e0674e;
   background-color: rgba(255, 255, 255, 0.904);
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
 }
 
 header {
@@ -338,6 +181,49 @@ header {
 header h2 {
   text-align: left;
   color: #a3a3a3;
+}
+
+header a {
+  background: none;
+  border: none;
+  padding: none;
+}
+
+header a:hover {
+  background: none;
+}
+
+header ul {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.nav {
+  position: fixed;
+  top: -11%;
+  right: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(0, 0, 0, 0.596);
+  color: white;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+  list-style: none;
+  padding-top: 4rem;
+  z-index: 90;
+}
+
+.showNav {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .headerIcon {
@@ -352,6 +238,43 @@ header h2 {
 
 .secondP {
   padding-top: 30px;
+}
+
+.hamburger {
+  padding-top: 30px;
+  position: fixed;
+  right: 5%;
+  font-size: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  z-index: 99;
+}
+
+.barOne,
+.barTwo,
+.barThree {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.clicked .barOne {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-9px, 6px);
+  background-color: #e0674e;
+}
+
+.clicked .barTwo {
+  opacity: 0;
+}
+
+.clicked .barThree {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+          transform: rotate(45deg) translate(-8px, -8px);
+  background-color: #e0674e;
 }
 
 .about {
@@ -426,7 +349,8 @@ header h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .projectGrouping .odd {
