--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -90,6 +90,27 @@ header ul {
   background-color: #e0674e;
 }
 
+.headerIcon i {
+  color: #e0674e;
+}
+
+.headerIcon {
+  position: absolute;
+  bottom: 2%;
+  right: 49%;
+  font-size: 2rem;
+  animation: bouncing 2s infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
+@keyframes bouncing {
+  0% {
+    opacity: 100;
+  }
+  50% {
+    transform: translateY(-1.5rem);
+    opacity: 0;
+  }
+}
 // .logo path:nth-child(1) {
 //   stroke-dasharray: 30px;
 // }
