--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -2,6 +2,7 @@ html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -160,4 +161,5 @@ a {
 a:hover {
   color: #e0674e;
   background-color: rgba(255, 255, 255, 0.904);
+  transition: 1s;
 }
