--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -22,6 +22,61 @@ header h2 {
   padding-top: 30px;
 }
 
+.nav {
+  justify-content: center;
+  justify-content: space-evenly;
+}
+
+.navContainer {
+  position: fixed;
+  top: -11%;
+  right: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(0, 0, 0, 0.651);
+  color: white;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
+  list-style: none;
+  padding-top: 4rem;
+  z-index: 90;
+}
+
+.showNav {
+  transform: translateY(0);
+}
+
+.hamburger {
+  position: fixed;
+  right: 5%;
+  top: 3%;
+  z-index: 99;
+}
+
+.barOne,
+.barTwo,
+.barThree {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.clicked .barOne {
+  transform: rotate(-45deg) translate(-9px, 6px);
+  background-color: #e0674e;
+}
+
+.clicked .barTwo {
+  opacity: 0;
+}
+
+.clicked .barThree {
+  transform: rotate(45deg) translate(-8px, -8px);
+  background-color: #e0674e;
+}
+
 header a {
   background: none;
   border: none;
