--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -170,6 +171,8 @@ a {
 a:hover {
   color: #e0674e;
   background-color: rgba(255, 255, 255, 0.904);
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 header {
@@ -194,6 +197,73 @@ header h2 {
 
 .secondP {
   padding-top: 30px;
+}
+
+.nav {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.navContainer {
+  position: fixed;
+  top: -11%;
+  right: 0;
+  width: 100%;
+  height: 20%;
+  background: rgba(0, 0, 0, 0.651);
+  color: white;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+  list-style: none;
+  padding-top: 4rem;
+  z-index: 90;
+}
+
+.showNav {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.hamburger {
+  position: fixed;
+  right: 5%;
+  top: 3%;
+  z-index: 99;
+}
+
+.barOne,
+.barTwo,
+.barThree {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.clicked .barOne {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-9px, 6px);
+  background-color: #e0674e;
+}
+
+.clicked .barTwo {
+  opacity: 0;
+}
+
+.clicked .barThree {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+          transform: rotate(45deg) translate(-8px, -8px);
+  background-color: #e0674e;
 }
 
 header a {
