--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -7,7 +7,7 @@
 }
 
 .aboutImg {
-  width: 50%;
+  width: 35%;
 }
 
 .about img {
@@ -16,6 +16,7 @@
 
 .aboutImgTxt {
   display: flex;
+  justify-content: center;
 }
 
 .aboutTxt {
