--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -5,7 +5,7 @@ header {
 
 header h2 {
   text-align: left;
-  color: #a3a3a3;
+  color: #e0674e;
 }
 
 .headerIcon {
@@ -29,11 +29,11 @@ header h2 {
 
 .navContainer {
   position: fixed;
-  top: -11%;
+  top: -12%;
   right: 0;
   width: 100%;
-  height: 20%;
-  background: rgba(0, 0, 0, 0.651);
+  height: 22%;
+  background: rgba(0, 0, 0, 0.842);
   color: white;
   transform: translateY(-100%);
   transition: transform 0.2s;
@@ -107,18 +107,28 @@ header a:hover {
     opacity: 0;
   }
 }
-// .logo path:nth-child(1) {
-//   stroke-dasharray: 30px;
-// }
 
-// .logo path:nth-child(2) {
-//   stroke-dasharray: 30px;
-// }
+.logo path:nth-child(1) {
+  stroke-dasharray: 30px;
+}
 
-// .logo path:nth-child(3) {
-//   stroke-dasharray: 30px;
-// }
+.logo path:nth-child(2) {
+}
 
-// .logo path:nth-child(4) {
-//   stroke-dasharray: 30px;
-// }
+.logo path:nth-child(3) {
+}
+
+.logo path:nth-child(4) {
+}
+
+.logo path:nth-child(5) {
+}
+
+.logo path:nth-child(6) {
+}
+
+.logo path:nth-child(7) {
+}
+
+.logo path:nth-child(8) {
+}
