--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -32,6 +32,7 @@
 
 .screenShots img {
   width: 100%;
+  display: block;
 }
 
 .projectGrouping {
@@ -39,7 +40,7 @@
   margin-bottom: 30px;
 }
 
-.projectGrouping .odd {
+.projectGrouping .even {
   order: 1;
 }
 
@@ -47,9 +48,13 @@
   padding-left: 40px;
 }
 
-.oddTxt {
+.evenTxt {
   padding-left: 0;
   padding-right: 40px;
+}
+
+.evenGroup {
+  margin: 10% 0;
 }
 
 .projects p {
