--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ header {
 
 header h2 {
   text-align: left;
-  color: #a3a3a3;
+  color: #e0674e;
 }
 
 .headerIcon {
@@ -210,11 +210,11 @@ header h2 {
 
 .navContainer {
   position: fixed;
-  top: -11%;
+  top: -12%;
   right: 0;
   width: 100%;
-  height: 20%;
-  background: rgba(0, 0, 0, 0.651);
+  height: 22%;
+  background: rgba(0, 0, 0, 0.842);
   color: white;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
@@ -310,6 +310,10 @@ header a:hover {
   }
 }
 
+.logo path:nth-child(1) {
+  stroke-dasharray: 30px;
+}
+
 .about {
   background-color: #282828;
 }
@@ -319,7 +323,7 @@ header a:hover {
 }
 
 .aboutImg {
-  width: 50%;
+  width: 35%;
 }
 
 .about img {
@@ -330,6 +334,9 @@ header a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .aboutTxt {
@@ -376,6 +383,7 @@ header a:hover {
 
 .screenShots img {
   width: 100%;
+  display: block;
 }
 
 .projectGrouping {
@@ -385,7 +393,7 @@ header a:hover {
   margin-bottom: 30px;
 }
 
-.projectGrouping .odd {
+.projectGrouping .even {
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
@@ -395,9 +403,13 @@ header a:hover {
   padding-left: 40px;
 }
 
-.oddTxt {
+.evenTxt {
   padding-left: 0;
   padding-right: 40px;
+}
+
+.evenGroup {
+  margin: 10% 0;
 }
 
 .projects p {
@@ -415,10 +427,25 @@ header a:hover {
 
 .icon {
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .skills {
   background-color: #282828;
+}
+
+.iconGrp {
+  min-width: 16%;
 }
 
 .contact {
