--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -95,10 +95,10 @@ header a:hover {
   bottom: 2%;
   right: 49%;
   font-size: 2rem;
-  animation: bouncing 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  animation: bop 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
-@keyframes bouncing {
+@keyframes bop {
   0% {
     opacity: 100;
   }
@@ -108,27 +108,69 @@ header a:hover {
   }
 }
 
+.logo {
+  animation: fill 0.5s ease forwards 3.5s;
+}
+
 .logo path:nth-child(1) {
-  stroke-dasharray: 30px;
+  stroke-dasharray: 298.1px;
+  stroke-dashoffset: 298.1px;
+  animation: lineAni 2s ease forwards;
 }
 
 .logo path:nth-child(2) {
+  stroke-dasharray: 215.1px;
+  stroke-dashoffset: 215.1px;
+  animation: lineAni 2s ease forwards 0.3s;
 }
 
 .logo path:nth-child(3) {
+  stroke-dasharray: 157.1px;
+  stroke-dashoffset: 157.1px;
+  animation: lineAni 2s ease forwards 0.6s;
 }
 
 .logo path:nth-child(4) {
+  stroke-dasharray: 202.1px;
+  stroke-dashoffset: 202.1px;
+  animation: lineAni 2s ease forwards 0.9s;
 }
 
 .logo path:nth-child(5) {
+  stroke-dasharray: 194.1px;
+  stroke-dashoffset: 194.1px;
+  animation: lineAni 2s ease forwards 1.2s;
 }
 
 .logo path:nth-child(6) {
+  stroke-dasharray: 202.1px;
+  stroke-dashoffset: 202.1px;
+  animation: lineAni 2s ease forwards 1.5s;
 }
 
 .logo path:nth-child(7) {
+  stroke-dasharray: 183.1px;
+  stroke-dashoffset: 183.1px;
+  animation: lineAni 2s ease forwards 1.8s;
 }
 
 .logo path:nth-child(8) {
+  stroke-dasharray: 310.1px;
+  stroke-dashoffset: 310.1px;
+  animation: lineAni 2s ease forwards 2.1s;
+}
+
+@keyframes lineAni {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to {
+    fill: #e0674e;
+  }
 }
