--- a/styles/style.css
+++ b/styles/style.css
@@ -284,11 +284,11 @@ header a:hover {
   bottom: 2%;
   right: 49%;
   font-size: 2rem;
-  -webkit-animation: bouncing 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
-          animation: bouncing 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  -webkit-animation: bop 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
+          animation: bop 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
-@-webkit-keyframes bouncing {
+@-webkit-keyframes bop {
   0% {
     opacity: 100;
   }
@@ -299,7 +299,7 @@ header a:hover {
   }
 }
 
-@keyframes bouncing {
+@keyframes bop {
   0% {
     opacity: 100;
   }
@@ -308,10 +308,97 @@ header a:hover {
             transform: translateY(-1.5rem);
     opacity: 0;
   }
+}
+
+.logo {
+  -webkit-animation: fill 0.5s ease forwards 3.5s;
+          animation: fill 0.5s ease forwards 3.5s;
 }
 
 .logo path:nth-child(1) {
-  stroke-dasharray: 30px;
+  stroke-dasharray: 298.1px;
+  stroke-dashoffset: 298.1px;
+  -webkit-animation: lineAni 2s ease forwards;
+          animation: lineAni 2s ease forwards;
+}
+
+.logo path:nth-child(2) {
+  stroke-dasharray: 215.1px;
+  stroke-dashoffset: 215.1px;
+  -webkit-animation: lineAni 2s ease forwards 0.3s;
+          animation: lineAni 2s ease forwards 0.3s;
+}
+
+.logo path:nth-child(3) {
+  stroke-dasharray: 157.1px;
+  stroke-dashoffset: 157.1px;
+  -webkit-animation: lineAni 2s ease forwards 0.6s;
+          animation: lineAni 2s ease forwards 0.6s;
+}
+
+.logo path:nth-child(4) {
+  stroke-dasharray: 202.1px;
+  stroke-dashoffset: 202.1px;
+  -webkit-animation: lineAni 2s ease forwards 0.9s;
+          animation: lineAni 2s ease forwards 0.9s;
+}
+
+.logo path:nth-child(5) {
+  stroke-dasharray: 194.1px;
+  stroke-dashoffset: 194.1px;
+  -webkit-animation: lineAni 2s ease forwards 1.2s;
+          animation: lineAni 2s ease forwards 1.2s;
+}
+
+.logo path:nth-child(6) {
+  stroke-dasharray: 202.1px;
+  stroke-dashoffset: 202.1px;
+  -webkit-animation: lineAni 2s ease forwards 1.5s;
+          animation: lineAni 2s ease forwards 1.5s;
+}
+
+.logo path:nth-child(7) {
+  stroke-dasharray: 183.1px;
+  stroke-dashoffset: 183.1px;
+  -webkit-animation: lineAni 2s ease forwards 1.8s;
+          animation: lineAni 2s ease forwards 1.8s;
+}
+
+.logo path:nth-child(8) {
+  stroke-dasharray: 310.1px;
+  stroke-dashoffset: 310.1px;
+  -webkit-animation: lineAni 2s ease forwards 2.1s;
+          animation: lineAni 2s ease forwards 2.1s;
+}
+
+@-webkit-keyframes lineAni {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes lineAni {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@-webkit-keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to {
+    fill: #e0674e;
+  }
+}
+
+@keyframes fill {
+  from {
+    fill: transparent;
+  }
+  to {
+    fill: #e0674e;
+  }
 }
 
 .about {
