--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -29,10 +29,10 @@ header h2 {
 
 .navContainer {
   position: fixed;
-  top: -12%;
+  top: -11%;
   right: 0;
   width: 100%;
-  height: 22%;
+  height: 210px;
   background: rgba(0, 0, 0, 0.842);
   color: white;
   transform: translateY(-100%);
@@ -56,7 +56,7 @@ header h2 {
 .barOne,
 .barTwo,
 .barThree {
-  width: 35px;
+  width: 36px;
   height: 5px;
   background-color: white;
   margin: 6px 0;
@@ -64,7 +64,7 @@ header h2 {
 }
 
 .clicked .barOne {
-  transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-8px, 8px);
   background-color: #e0674e;
 }
 
