--- a/styles/style.css
+++ b/styles/style.css
@@ -210,10 +210,10 @@ header h2 {
 
 .navContainer {
   position: fixed;
-  top: -12%;
+  top: -11%;
   right: 0;
   width: 100%;
-  height: 22%;
+  height: 210px;
   background: rgba(0, 0, 0, 0.842);
   color: white;
   -webkit-transform: translateY(-100%);
@@ -242,7 +242,7 @@ header h2 {
 .barOne,
 .barTwo,
 .barThree {
-  width: 35px;
+  width: 36px;
   height: 5px;
   background-color: white;
   margin: 6px 0;
@@ -251,8 +251,8 @@ header h2 {
 }
 
 .clicked .barOne {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-          transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+          transform: rotate(-45deg) translate(-8px, 8px);
   background-color: #e0674e;
 }
 
