added media queries for projects section

--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -47,9 +47,9 @@ header h2 {
 }
 
 .hamburger {
-  position: fixed;
+  position: absolute;
   right: 5%;
-  top: 3%;
+  top: 15%;
   z-index: 99;
 }
 
