--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ section {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2.5em;
   margin: 0.67em 0;
 }
 
@@ -170,7 +170,7 @@ a {
 
 a:hover {
   color: #e0674e;
-  background-color: rgba(255, 255, 255, 0.904);
+  background-color: rgba(255, 255, 255, 0.822);
   -webkit-transition: 1s;
   transition: 1s;
 }
@@ -233,9 +233,9 @@ header h2 {
 }
 
 .hamburger {
-  position: fixed;
+  position: absolute;
   right: 5%;
-  top: 3%;
+  top: 15%;
   z-index: 99;
 }
 
@@ -564,9 +564,44 @@ header a:hover {
   border: 1px solid white;
 }
 
+.email {
+  font-size: 1.5rem;
+}
+
 footer {
   background-color: #2a2a2a;
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
+}
+
+@media (max-width: 992px) {
+  .projectGrouping {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 20px;
+    border: 1px solid #e0664e88;
+  }
+  .projectGrouping .even {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+  }
+  .projectTxt {
+    padding: 20px 0 0;
+  }
+  .project h3 {
+    padding-bottom: 15px;
+  }
+  .projectTxt {
+    text-align: center;
+  }
+  .view,
+  .projectsIcons {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
