added more media queries

--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -12,11 +12,16 @@
 
 .about img {
   width: 100%;
+  display: block;
 }
 
 .aboutImgTxt {
   display: flex;
   justify-content: center;
+}
+
+.hiddenPortImg {
+  display: none;
 }
 
 .aboutTxt {
