--- a/styles/style.css
+++ b/styles/style.css
@@ -600,15 +600,6 @@ footer {
   .project h3 {
     padding-bottom: 15px;
   }
-  .projectTxt {
-    text-align: center;
-  }
-  .view,
-  .projectsIcons {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
   .hiddenPortImg {
     display: block;
   }
@@ -621,15 +612,36 @@ footer {
     padding-left: 0;
   }
   .aboutLinks {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
     padding-top: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+  * {
+    font-size: 110%;
+  }
+  .projects h4 {
+    padding-bottom: 20px;
+  }
+  .email {
+    padding-bottom: 40px;
+  }
+  .logo {
+    width: 200px;
+  }
+}
+
+@media (max-width: 400px) {
+  * {
+    font-size: 100%;
+  }
+  .email {
+    font-size: 1.2rem;
+  }
+  .view {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
