--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -15,7 +15,10 @@ header h2 {
 }
 
 .landingWords {
-  padding-top: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 
 .secondP {
