--- a/styles/style.css
+++ b/styles/style.css
@@ -243,9 +243,9 @@ header h2 {
 }
 
 .hamburger {
-  position: absolute;
+  position: fixed;
   right: 5%;
-  top: 15%;
+  top: 4%;
   z-index: 99;
 }
 
@@ -291,7 +291,7 @@ header a:hover {
 
 .headerIcon {
   position: absolute;
-  bottom: 2%;
+  bottom: 0%;
   right: 49%;
   font-size: 2rem;
   -webkit-animation: bop 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
@@ -579,7 +579,7 @@ header a:hover {
   border: 1px solid white;
 }
 
-.email {
+.email a {
   font-size: 1.5rem;
 }
 
@@ -639,16 +639,20 @@ footer {
   .projects h4 {
     padding-bottom: 20px;
   }
-  .email {
+  .email a {
     padding-bottom: 40px;
   }
   .logo {
     width: 250px;
   }
+  .navContainer {
+    top: 0%;
+    height: 183px;
+  }
 }
 
 @media (max-width: 400px) {
-  .email {
+  .email a {
     font-size: 1.2rem;
   }
   .view {
