--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -2,7 +2,7 @@
   .projectGrouping {
     flex-direction: column;
     padding: 20px;
-    border: 1px solid #e0664e88;
+    border: 1px solid $orangeBg;
   }
   .projectGrouping .even {
     order: 0;
