--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #2a2a2a;
+  background-color: $bgColourTwo;
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
