--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -1,6 +1,6 @@
 header {
   height: 100vh;
-  background-color: #2a2a2a;
+  background-color: $bgColourTwo;
 }
 
 header h2 {
@@ -37,7 +37,7 @@ header h2 {
   width: 100%;
   height: 210px;
   background: rgba(0, 0, 0, 0.842);
-  color: white;
+  color: $whiteColour;
   transform: translateY(-100%);
   transition: transform 0.2s;
   list-style: none;
@@ -61,14 +61,14 @@ header h2 {
 .barThree {
   width: 36px;
   height: 5px;
-  background-color: white;
+  background-color: $whiteColour;
   margin: 6px 0;
   transition: 0.4s;
 }
 
 .clicked .barOne {
   transform: rotate(-45deg) translate(-8px, 8px);
-  background-color: #e0674e;
+  background-color: $orangeColour;
 }
 
 .clicked .barTwo {
@@ -77,7 +77,7 @@ header h2 {
 
 .clicked .barThree {
   transform: rotate(45deg) translate(-8px, -8px);
-  background-color: #e0674e;
+  background-color: $orangeColour;
 }
 
 header a {
@@ -90,7 +90,7 @@ header a:hover {
 }
 
 .headerIcon i {
-  color: #e0674e;
+  color: $orangeColour;
 }
 
 .headerIcon {
@@ -174,6 +174,6 @@ header a:hover {
     fill: transparent;
   }
   to {
-    fill: #e0674e;
+    fill: $orangeColour;
   }
 }
