--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -92,7 +92,7 @@ h4 {
 }
 
 * {
-  color: white;
+  color: $whiteColour;
   font-family: "Exo 2", sans-serif;
   font-size: 125%;
   letter-spacing: 1px;
@@ -123,7 +123,7 @@ a {
 
 h2 {
   font-size: 3rem;
-  color: #e0674e;
+  color: $orangeColour;
   text-align: center;
   padding-bottom: 20px;
 }
@@ -146,7 +146,7 @@ a {
 }
 
 a:hover {
-  color: #e0674e;
+  color: $whiteColour;
   background-color: rgba(255, 255, 255, 0.822);
   transition: 1s;
 }
