--- a/styles/style.css
+++ b/styles/style.css
@@ -99,25 +99,11 @@ h4 {
 }
 
 * {
-  color: white;
+  color: #fff;
   font-family: "Exo 2", sans-serif;
   font-size: 125%;
   letter-spacing: 1px;
   line-height: 130%;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 ul {
@@ -161,7 +147,7 @@ h4 {
 
 a {
   text-decoration: none;
-  color: white;
+  color: #fff;
   border: 1px solid #e0674e;
   background-color: #e0664e94;
   border-radius: 5px;
@@ -169,7 +155,7 @@ a {
 }
 
 a:hover {
-  color: #e0674e;
+  color: #fff;
   background-color: rgba(255, 255, 255, 0.822);
   -webkit-transition: 1s;
   transition: 1s;
@@ -225,7 +211,7 @@ header h2 {
   width: 100%;
   height: 210px;
   background: rgba(0, 0, 0, 0.842);
-  color: white;
+  color: #fff;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: -webkit-transform 0.2s;
@@ -254,7 +240,7 @@ header h2 {
 .barThree {
   width: 36px;
   height: 5px;
-  background-color: white;
+  background-color: #fff;
   margin: 6px 0;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -555,7 +541,7 @@ header a:hover {
 }
 
 .contact h2 {
-  color: white;
+  color: #fff;
   padding-bottom: 50px;
 }
 
@@ -576,7 +562,7 @@ header a:hover {
 
 .contact ul li a:hover {
   background-color: transparent;
-  border: 1px solid white;
+  border: 1px solid #fff;
 }
 
 .email a {
@@ -597,7 +583,7 @@ footer {
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 20px;
-    border: 1px solid #e0664e88;
+    border: 1px solid #e0664e94;
   }
   .projectGrouping .even {
     -webkit-box-ordinal-group: 1;
@@ -639,7 +625,7 @@ footer {
   .projects h4 {
     padding-bottom: 20px;
   }
-  .email a {
+  .email {
     padding-bottom: 40px;
   }
   .logo {
