--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -146,7 +146,7 @@ a {
 }
 
 a:hover {
-  color: $whiteColour;
+  color: $orangeColour;
   background-color: rgba(255, 255, 255, 0.822);
   transition: 1s;
 }
