--- a/styles/sass/_setup.scss
+++ b/styles/sass/_setup.scss
@@ -147,6 +147,6 @@ a {
 
 a:hover {
   color: $orangeColour;
-  background-color: rgba(255, 255, 255, 0.822);
+  background-color: $whiteColour;
   transition: 1s;
 }
