--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,7 @@ a {
 
 a:hover {
   color: #e0674e;
-  background-color: rgba(255, 255, 255, 0.822);
+  background-color: #fff;
   -webkit-transition: 1s;
   transition: 1s;
 }
