added work in progress projects

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -6,6 +6,12 @@
   padding-bottom: 50px;
 }
 
+.wipH3 {
+  padding-bottom: 70px;
+  text-align: center;
+  color: $orangeColour;
+}
+
 .projectsIcons img {
   width: 25px;
   height: 25px;
