added work in progress and fixed some styling

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -9,6 +9,10 @@
   }
   .projectTxt {
     padding: 20px 0 0;
+    width: 100%;
+  }
+  .screenShots{
+    width: 100%;
   }
   .project h3 {
     padding-bottom: 15px;
