--- a/styles/sass/_landing.scss
+++ b/styles/sass/_landing.scss
@@ -3,6 +3,15 @@ header {
   background-color: $bgColourTwo;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+
+h1,
+.animatedName {
+  text-align: center;
+}
+
 header h2 {
   text-align: left;
   color: $orangeColour;
