--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -1,4 +1,7 @@
 @media (max-width: 992px) {
+  .logo {
+    width: 700px;
+  }
   .projectGrouping {
     flex-direction: column;
     padding: 20px;
@@ -36,6 +39,7 @@
 @media (max-width: 800px) {
   .logo {
     width: 400px;
+    height: 80px;
   }
   h1 {
     font-size: 1rem;
@@ -54,6 +58,7 @@
   }
   .logo {
     width: 250px;
+    height: 50px;
   }
   .navContainer {
     top: 0%;
