rounded corners to keep up with the style of the page

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -41,7 +41,7 @@
   display: block;
 }
 
-.screenShots img{
+.screenShots img {
   width: 100%;
 }
 
@@ -71,4 +71,8 @@
 
 .projects p {
   padding-bottom: 20px;
+}
+
+.projects img {
+  border-radius: 20px;
 }
