--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding: 20px;
     border: 1px solid $orangeBg;
+    border-radius: 20px;
   }
   .projectGrouping .even {
     order: 0;
