fixed a bunch of stuff

--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -33,3 +33,17 @@
 .about img {
   border-radius: 20px;
 }
+
+.secondP,
+.hashtags {
+  padding-top: 30px;
+}
+
+.aboutLinks {
+  display: flex;
+  margin-top: 30px;
+}
+
+.aboutLinks a {
+  margin-right: 15px;
+}
