--- a/styles/style.css
+++ b/styles/style.css
@@ -201,10 +201,6 @@ header h2 {
   height: 100%;
 }
 
-.secondP {
-  padding-top: 30px;
-}
-
 .nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -461,6 +457,22 @@ header a:hover {
 
 .about img {
   border-radius: 20px;
+}
+
+.secondP,
+.hashtags {
+  padding-top: 30px;
+}
+
+.aboutLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 30px;
+}
+
+.aboutLinks a {
+  margin-right: 15px;
 }
 
 .projects {
